Add letest code

--- a/index.html
+++ b/index.html
@@ -95,9 +95,9 @@
         </div>
       </div>
     </header>
-    <main>
-      <h1 class="text-3xl text-center">Money Master💰</h1>
-      <section class="p-10 flex gap-6 bg-blue-900">
+    <main class="bg-blue-400 py-12">
+      <h1 class="text-5xl text-center">Money Master💰</h1>
+      <section class="p-10 flex gap-6">
         <div class="w-7/12 bg-red-600 border-red-500 border border-4">
           <img
             class="w-full"
