add negetive validation

--- a/index.html
+++ b/index.html
@@ -131,6 +131,7 @@
               type="text"
               name=""
               id="food-input"
+              value="00"
             />
           </div>
           <div class="py-3">
@@ -140,6 +141,7 @@
               type="text"
               name=""
               id="rent-input"
+              value="00"
             />
           </div>
           <div class="py-3">
@@ -149,6 +151,7 @@
               type="text"
               name=""
               id="cloth-input"
+              value="00"
             />
           </div>
           <button id="expense-btn" class="btn btn-success">
